--- a/bis/css/sub.css
+++ b/bis/css/sub.css
@@ -53,7 +53,7 @@
   display: block;
   position: fixed; top: 0; left: 0; z-index: -1;
   width: 100%; height: 100%;
-  background-image: url('../img/sub/backimg-service-company-trnIns.jpg?eni');
+  background-image: url('../img/sub/backimg-service-company-visual.jpg?e');
   background-repeat: no-repeat;
   background-size: 100%;
   transform: translateZ(0);
